--- a/TheSpectaclesGit/src/main/webapp/WEB-INF/web.xml
+++ b/TheSpectaclesGit/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
      <description>
  		Riferimento a JNDI ad un data source    
      </description>
-  	<res-ref-name>jdbc/TheSpectacles</res-ref-name>
+  	<res-ref-name>jdbc/ecommerce</res-ref-name>
   	<res-type>javax.sql.DataSource</res-type>
     <res-auth>Container</res-auth>
   </resource-ref>
